Cambiato colore navbar. Corretti url kibana. Cambiato vendor required

--- a/VIS3_app/templates/nform.html
+++ b/VIS3_app/templates/nform.html
@@ -15,57 +15,8 @@
     <script src="static/assets/js/smoothproducts.min.js"></script>
     <script src="static/assets/js/theme.js"></script>
 
-    <style>
-        body{
-            background-image: linear-gradient(rgba(255,255,255,.85), rgba(255,255,255,.85)), url('static/scenery/bg.jpeg');
-            background-size: cover;
-        }
-        .button4{
-            border-radius: 8px;
-        }
-        #uploadIconTitle{
-                font-weight:    bold;
-            }
-        #downloadIconTitle{
-                font-weight:    bold;
-            }
-        .col-xs-24,
-        .col-sm-24,
-        .col-md-24,
-        .col-lg-24 {
-            position: relative;
-            min-height: 1px;
-            padding-right: 10px;
-            padding-left: 10px;
-        }
-        .col-xs-24 {
-            width: 20%;
-            float: left;
-        }
-        @media (min-width: 768px) {
-        .col-sm-24 {
-                width: 20%;
-                float: left;
-            }
-        }
-        @media (min-width: 992px) {
-            .col-md-24 {
-                width: 20%;
-                float: left;
-            }
-        }
-        @media (min-width: 1200px) {
-            .col-lg-24 {
-                width: 20%;
-                float: left;
-            }
-        }
-        .navbar-nav .nav-link,
-        .navbar-brand {
-            text-align: right;
-        }
-
-    </style>
+    <link rel="stylesheet" href="static/assets/css/mine.css">
+    
     <script>
         function deleteRow(r) {
             var i = r.parentNode.parentNode.rowIndex;
