changed name to project

--- a/ISEV_app/templates/nform.html
+++ b/ISEV_app/templates/nform.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>VIS3</title>
+    <title>ISEV</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
@@ -63,7 +63,7 @@
 <body style="display: flex; flex-direction: column; height: 100%;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{ url_for('.main') }}">VIS3</a>
+            <a class="navbar-brand" href="{{ url_for('.main') }}">ISEV</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -88,7 +88,7 @@
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" src="static/scenery/VIS3_alt.png"/></div>
+                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" src="static/scenery/ISEV_alt.png"/></div>
                 </div>  
 
                 <div class="jumbotron card border-secondary mb-3" style="padding: 2rem;"    >
