--- a/ISEV_app/templates/nhome.html
+++ b/ISEV_app/templates/nhome.html
@@ -50,11 +50,11 @@
                 </div>
 
                 <div class="row justify-content-center jumbotron card border-secondary mb-3" style="padding: 2rem; border-radius: 0.5rem;">
-                    <p style="margin: 0px;"> ISEV is a tool used to harvest OSINT (NVD, CVE Details, Exploit DB) aimed to aggregate informations about known vulnerabilities.<br><br>
-                        Those informations can be exctracted by:<br>
+                    <p style="margin: 0px;"> ISEV is a tool used to harvest OSINT (NVD, CVE Details, Exploit DB) aimed to aggregate information about known vulnerabilities.<br><br>
+                        The information can be exctracted by:<br>
                         &emsp;- manually filling a form<br> 
                         &emsp;- uploading a searching card<br><br>
-                        As a result, in both cases can be obtained three dashboards hosted on Kibana, describing respectivelly the vulnerabilities found, their description and informations related to the avaliable exploits.
+                        As a result, in both cases can be obtained three dashboards hosted on Kibana, describing respectivelly the vulnerabilities found, their description and information related to the avaliable exploits.
                         Moreover, it is possible to export those kinds of data as a unified CSV so that they can be easily managed and reviewed.<br> 
                         ISEV can be also used from the CLI, showing the results in a minimal and effective TUI.</p>
                 </div>
