--- a/ISEV_app/templates/nform.html
+++ b/ISEV_app/templates/nform.html
@@ -104,7 +104,7 @@
                                 <label class="col-form-label" for="SoftwareInput">Target Software</label>
                                 <input id="SoftwareInput" type="text" name="inputBox" placeholder="Target Software" class="form-control">
                                 <label class="col-form-label" for="ProductInput">Product Type</label>
-                                <input id="ProductInput" type="text" name="inputBox" placeholder='"a", "o" or "h"' class="form-control">
+                                <input id="ProductInput" type="text" name="inputBox" placeholder='"Application", "OS" or "Hardware"' class="form-control">
                                 <label class="col-form-label" for="PlatformInput">Platform</label>
                                 <input id="PlatformInput" type="text" name="inputBox" placeholder="Platform" class="form-control">
                                 <small id="fileHelp" class="form-text text-muted" style="margin-bottom: 10px;">* = Required fields.</small>
