--- a/ISEV_app/templates/nform.html
+++ b/ISEV_app/templates/nform.html
@@ -113,7 +113,7 @@
                         <div class="col-1" style="margin-left: -3%;"></div>
 
                         <div class="col-8 feature-box">
-                            <div class="row justify-content-md-center">
+                            <div class="row justify-content-center">
                             <form id="searchingCardForm" action="{{ url_for('.returnLinks') }}" method="POST" style="width: 99%;">
                                 <input type="hidden" name="res" id="searchingCardField" />
                                 <table id="tableID" width="100%" class="table table-hover"> 
