--- a/ISEV_app/templates/nhome.html
+++ b/ISEV_app/templates/nhome.html
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="row justify-content-center jumbotron card border-secondary mb-3" style="padding: 2rem; border-radius: 0.5rem;">
-                    <p style="margin: 0px;"> ISEV is a tool used to harvest OSINT (e.g. NVD, Exploit DB) aimed to aggregate information about known vulnerabilities.<br>
+                    <p style="margin: 0px;"> ISEV is a search engine on information delivered by OSINT sources (e.g. NVD, Exploit DB) to support Vulnerability Assessment.<br>
                         The information can be exctracted by:<br>
                         &emsp;- manually filling a form<br> 
                         &emsp;- uploading a searching card<br><br>
