--- a/ISEV_app/templates/nresults.html
+++ b/ISEV_app/templates/nresults.html
@@ -107,9 +107,9 @@
                         </div>
                         <div class="col-1"></div>
                         <div class="col-5 feature-box">
-                            EXPORTS
+                            CSV
                             <ul>
-                                <li class="elencopuntato"><i class="fas fa-file-csv"  style="font-size:24px;color:mediumseagreen; margin-right: 0.25em;"></i><a href="{{ url_for('.exportCSV') }}?csv_name={{ csvLink }}" style="color: #007bff;">Export to CSV</a></li>
+                                <li class="elencopuntato"><i class="fas fa-file-csv"  style="font-size:24px;color:mediumseagreen; margin-right: 0.25em;"></i><a href="{{ url_for('.exportCSV') }}?csv_name={{ csvLink }}" style="color: #007bff;">Export CSV</a></li>
                             </ul>
                         </div>
                     </div>
