--- a/VISE_app/templates/nhome.html
+++ b/VISE_app/templates/nhome.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ISEV</title>
+    <title>VISE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
@@ -21,7 +21,7 @@
 <body style="display: flex; flex-direction: column; height: 100%;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{ url_for('.main') }}">ISEV</a>
+            <a class="navbar-brand" href="{{ url_for('.main') }}">VISE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="row justify-content-center jumbotron card border-secondary mb-3" style="padding: 2rem; border-radius: 0.5rem;">
-                    <p style="margin: 0px;"> ISEV is a search engine on information delivered by OSINT sources (e.g. NVD, Exploit DB) to support Vulnerability Assessment.<br>
+                    <p style="margin: 0px;"> VISE is a search engine on information delivered by OSINT sources (e.g. NVD, Exploit DB) to support Vulnerability Assessment.<br>
                         The information can be exctracted by:<br>
                         &emsp;- manually filling a form<br> 
                         &emsp;- uploading a searching card<br><br>
@@ -59,7 +59,7 @@
                         &emsp;2) a more deep description about ones<br>
                         &emsp;3) the available exploits for them<br><br>
                         Moreover, it is possible to export those kinds of data as a unified CSV so that they can be easily managed and reviewed.<br> 
-                        ISEV can be also used from the CLI, showing the results in a minimal and effective TUI.</p>
+                        VISE can be also used from the CLI, showing the results in a minimal and effective TUI.</p>
                 </div>
 
                 <div style='margin-top:20px;'></div>
