--- a/VISE_app/templates/nform.html
+++ b/VISE_app/templates/nform.html
@@ -17,6 +17,16 @@
 
     <link rel="stylesheet" href="static/assets/css/mine.css">
     
+    <style>
+    .center {
+        display: block;
+        height: 37%;
+        width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    </style>
+
     <script>
         function deleteRow(r) {
             var i = r.parentNode.parentNode.rowIndex;
@@ -84,12 +94,16 @@
         </nav>
     </header>
 
+    <div style='margin-top:20px;'></div>
+
     <main class="page landing-page">
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" src="static/scenery/ISEV_alt.png"/></div>
+                    <div id="title" class="carousel-item active"><img class="center" src="static/scenery/VISE_alt.png"/></div>
                 </div>  
+
+                <div style='margin-top:20px;'></div>
 
                 <div class="jumbotron card border-secondary mb-3" style="padding: 2rem;"    >
                     <div class="row justify-content-center">
@@ -142,10 +156,8 @@
             </div>
 
         </section>
-       
-        <div style='margin-top:50px;'></div>
 
-        <div style='margin-top:50px;'></div>
+        <div style='margin-top:30px;'></div>
 
     </main>
     <footer class="page-footer dark" style="flex-shrink:0;">
