--- a/VISE_app/templates/nsearchingCard.html
+++ b/VISE_app/templates/nsearchingCard.html
@@ -18,6 +18,16 @@
 
     <link rel="stylesheet" href="static/assets/css/mine.css">
     
+    <style>
+    .center {
+        display: block;
+        height: 45%;
+        width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    </style>
+
     <script>
         function uploadFunction(){
             document.getElementById("labelFile").innerHTML = document.getElementById("myFile").value;
@@ -48,13 +58,18 @@
             </div>
         </nav>
     </header>
-    <main class="page landing-page" style="flex: 1 0 auto;">
+
+    <div style='margin-top:20px;'></div>
+
+    <main class="page landing-page">
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" max-width="800" src="static/scenery/ISEV_alt.png"/></div>
+                    <div id="title" class="carousel-item active"><img class="center" src="static/scenery/VISE_alt.png"/></div>
                 </div>  
             </div>
+
+            <div style='margin-top:20px;'></div>
 
             <div class="row justify-content-center">
                 <div class="col-md-5 feature-box card bg-light border-info mb-3">
