--- a/VISE_app/templates/nresults.html
+++ b/VISE_app/templates/nresults.html
@@ -17,6 +17,16 @@
     <script src="static/assets/js/theme.js"></script>
 
     <link rel="stylesheet" href="static/assets/css/mine.css">
+
+    <style>
+    .center {
+        display: block;
+        height: 44%;
+        width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    </style>
     
     <script>
         function deleteRow(r) {
@@ -84,12 +94,18 @@
             </div>
         </nav>
     </header>
+
+    <div style='margin-top:20px;'></div>
+
     <main class="page landing-page" style="flex: 1 0 auto;">
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" max-width="800" src="static/scenery/ISEV_alt.png"/></div>
+                    <div id="title" class="carousel-item active"><img class="center" src="static/scenery/VISE_alt.png"/></div>
                 </div>
+
+                <div style='margin-top:20px;'></div>
+
                 <div class="jumbotron card border-primary">
                     <div class="row" style="margin-left: 1em; margin-bottom: 1em;">
                         <p class="lead">Results are shown below:</p>
@@ -117,6 +133,9 @@
             </div>
         </section>
     </main>
+
+    <div style='margin-top:20px;'></div>
+
     <footer class="page-footer dark" style="flex-shrink:0;">
         <div class="footer-copyright">
             <p footer-text align="middle">Copyright © 2020 CyberHackademy. All rights reserved.</p>
