--- a/VISE_app/templates/nhome.html
+++ b/VISE_app/templates/nhome.html
@@ -73,7 +73,7 @@
                         &emsp;2) a more deep description about ones<br>
                         &emsp;3) the available exploits for them<br><br>
                         Moreover, it is possible to export those kinds of data as a unified CSV so that they can be easily managed and reviewed.<br> 
-                        VISE can be also used from the CLI, showing the results in a minimal and effective TUI.</p>
+                        VISE can also be used from the CLI.</p>
                 </div>
 
                 <div style='margin-top:20px;'></div>
