--- a/VISE_app/templates/nsearchingCard.html
+++ b/VISE_app/templates/nsearchingCard.html
@@ -1,123 +1,123 @@
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>VISE</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="static/assets/css/bootstrap.min.css">
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="static/assets/js/smoothproducts.min.js"></script>
-    <script src="static/assets/js/theme.js"></script>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <title>VISE</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+        <link rel="stylesheet" href="static/assets/css/bootstrap.min.css">
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+        <script src="static/assets/js/smoothproducts.min.js"></script>
+        <script src="static/assets/js/theme.js"></script>
 
-    <link rel="stylesheet" href="static/assets/css/mine.css">
-    
-    <style>
-    .center {
-        display: block;
-        height: 45%;
-        width: 40%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    </style>
-
-    <script>
-        function uploadFunction(){
-            document.getElementById("labelFile").innerHTML = document.getElementById("myFile").value;
+        <link rel="stylesheet" href="static/assets/css/mine.css">
+        
+        <style>
+        .center {
+            display: block;
+            height: 45%;
+            width: 40%;
+            margin-left: auto;
+            margin-right: auto;
         }
-    </script>
+        </style>
 
-</head>
-<body style="display: flex; flex-direction: column; height: 100%;">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{ url_for('.main') }}">VISE</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarColor01">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('.main') }}">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('.form')}}">Form</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="{{ url_for('.searchingCard')}}">Searching card <span class="sr-only">(current)</span></a>
-                </li>
-              </ul>
-            </div>
-        </nav>
-    </header>
+        <script>
+            function uploadFunction(){
+                document.getElementById("labelFile").innerHTML = document.getElementById("myFile").value;
+            }
+        </script>
 
-    <div style='margin-top:20px;'></div>
+    </head>
+    <body style="display: flex; flex-direction: column; height: 100%;">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <a class="navbar-brand" href="{{ url_for('.main') }}">VISE</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('.main') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('.form')}}">Form</a>
+                    </li>
+                    <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('.searchingCard')}}">Searching card <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        </header>
 
-    <main class="page landing-page">
-        <section class="clean-block features" style ="border-color: rgb(201,190,201);">
-            <div class="container">
-                <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="center" src="static/scenery/VISE_alt.png"/></div>
-                </div>  
-            </div>
+        <div style='margin-top:20px;'></div>
 
-            <div style='margin-top:20px;'></div>
-
-            <div class="row justify-content-center">
-                <div class="col-md-5 feature-box card bg-light border-info mb-3">
-                    <div class="card-header"><h4 class="card-title text-info" style="margin-bottom: 0;"><i id = uploadIconTitle class="icon-folder-alt icon text-info" style="margin-right: 0.5em;"></i>Import Searching Card</h4></div>
-                    <div class="card-body">
-                        <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
-                        <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
-                            <div class="form-group">
-                                <div class="input-group mb-3">
-                                <div class="custom-file">
-                                    <input type="file" id="myFile" name="searchingCard" class="custom-file-input" onchange="uploadFunction()">
-                                    <label id="labelFile" class="custom-file-label">Choose file</label>
-                                </div>
-                                <div class="input-group-append">
-                                    <input type="submit" id="returnLinksButton" class="btn btn-info" value="Upload" /> <!--Upload</button>-->
-                                </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+        <main class="page landing-page">
+            <section class="clean-block features" style ="border-color: rgb(201,190,201);">
+                <div class="container">
+                    <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
+                        <div id="title" class="carousel-item active"><img class="center" src="static/scenery/VISE_alt.png"/></div>
+                    </div>  
                 </div>
 
-                <div style='margin-right:80px;'></div>
+                <div style='margin-top:20px;'></div>
 
-                <div class="col-md-5 feature-box card bg-light border-primary mb-3">
-                    <div class="card-header"><h4 class="card-title text-primary" style="margin-bottom: 0;"><i id = downloadIconTitle class="icon-arrow-down-circle icon text-primary" style="margin-right: 0.5em;"></i>Searching Card sample</h4></div>
-                    <div class="card-body">
-                        <p class="card-text">Click the button below to download a sample of a searching card.</p>
-                        <a href="{{ url_for('.downloadFunction') }}" download> 
-                            <button id="submitButton" type="button" class="btn btn-primary">DOWNLOAD</button>
-                        </a> 
-                        <p></p>
-                        <p class="card-text">If you want to create your own searching card be carefull, you must specify at least the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
-                        <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
+                <div class="row justify-content-center">
+                    <div class="col-md-5 feature-box card bg-light border-info mb-3">
+                        <div class="card-header"><h4 class="card-title text-info" style="margin-bottom: 0;"><i id = uploadIconTitle class="icon-folder-alt icon text-info" style="margin-right: 0.5em;"></i>Import Searching Card</h4></div>
+                        <div class="card-body">
+                            <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
+                            <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
+                                <div class="form-group">
+                                    <div class="input-group mb-3">
+                                    <div class="custom-file">
+                                        <input type="file" id="myFile" name="searchingCard" class="custom-file-input" onchange="uploadFunction()">
+                                        <label id="labelFile" class="custom-file-label">Choose file</label>
+                                    </div>
+                                    <div class="input-group-append">
+                                        <input type="submit" id="returnLinksButton" class="btn btn-info" value="Upload" /> <!--Upload</button>-->
+                                    </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div style='margin-right:80px;'></div>
+
+                    <div class="col-md-5 feature-box card bg-light border-primary mb-3">
+                        <div class="card-header"><h4 class="card-title text-primary" style="margin-bottom: 0;"><i id = downloadIconTitle class="icon-arrow-down-circle icon text-primary" style="margin-right: 0.5em;"></i>Searching Card sample</h4></div>
+                        <div class="card-body">
+                            <p class="card-text">Click the button below to download a sample of a searching card.</p>
+                            <a href="{{ url_for('.downloadSearchingCardSample') }}" download> 
+                                <button id="submitButton" type="button" class="btn btn-primary">DOWNLOAD</button>
+                            </a> 
+                            <p></p>
+                            <p class="card-text">If you want to create your own searching card be carefull, you must specify at least the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
+                            <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
+                        </div>
                     </div>
                 </div>
+            </section>
+        </main>
+        <footer class="page-footer dark" style="flex-shrink:0;">
+            <div class="footer-copyright" style="margin-top: 20px; height: 50px;">
+                
+                <p footer-text align="middle">Copyright © 2020 CyberHackademy. All rights reserved.</p>
+                
             </div>
-        </section>
-    </main>
-    <footer class="page-footer dark" style="flex-shrink:0;">
-        <div class="footer-copyright" style="margin-top: 20px; height: 50px;">
             
-            <p footer-text align="middle">Copyright © 2020 CyberHackademy. All rights reserved.</p>
+                
             
-        </div>
-        
-            
-        
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
